--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,1 @@
-DB_URL=mongodb+srv://sahil:Sahil8139@cluster0.5qqak.mongodb.net/olx-clone?retryWrites=true&w=majority
-CLOUDINARY_URL=cloudinary://752532847638118:PtVceYKPirnEJmJXRMhuceEmBXY@sahiljena
+DB_URL=<connection string here>
